Fix quiz finish image overflow

--- a/client/src/components/QuizModal/QuizModal.module.css
+++ b/client/src/components/QuizModal/QuizModal.module.css
@@ -125,6 +125,8 @@
 .finishSection img {
   align-items: center;
   margin: 0 auto;
+  width: 100%;
+  max-width: 500px;
 }
 
 .finishButton {
